Barebones fragment demo (Not yet hooked up)

--- a/Dictionary/app/src/main/res/values/strings.xml
+++ b/Dictionary/app/src/main/res/values/strings.xml
@@ -1,4 +1,12 @@
 <resources>
     <string name="app_name">Dictionary</string>
     <string name="takepicture">Take Picture</string>
+    <string-array name="words">
+        <item>word 1</item>
+        <item>word 2</item>
+        <item>word 3</item>
+        <item>word 4</item>
+        <item>word 5</item>
+        <item>word 6</item>
+    </string-array>
 </resources>
